<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminfiles.adminLogin">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="73dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eco_switch"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/lato"
        android:text="@string/deliver_favourite_food"
        android:textColor="#2E7D32"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/lato"
        android:text="Login as Admin"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/adminEmail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/editextshape"
        android:drawableLeft="@drawable/mail_02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/email_or_phone_number"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/adminPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/editextshape"
        android:drawableLeft="@drawable/lock_01"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/adminEmail"
        app:layout_constraintStart_toStartOf="@+id/adminEmail"
        app:layout_constraintTop_toBottomOf="@+id/adminEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginAdminButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/greenbuttongradient"

        android:elevation="3dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/adminPassword"
        app:layout_constraintStart_toStartOf="@+id/adminPassword"
        app:layout_constraintTop_toBottomOf="@+id/adminPassword" />

    <TextView
        android:id="@+id/userRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"

        android:text="Login as User"

        app:layout_constraintEnd_toEndOf="@+id/loginAdminButton"
        app:layout_constraintStart_toStartOf="@+id/loginAdminButton"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminButton" />

</androidx.constraintlayout.widget.ConstraintLayout>